repo/fail-pod-repo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: bd-demo
spec:
  containers:
    - image: naughtyrepo/nginx
      name: nginx
      ports:
        - containerPort: 80
          name: http
