repo/constraint-pod-repo.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: prod-repo-is-openpolicyagent
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "bd-demo"
  parameters:
    repos:
      - "gcr.io/"
      - "openpolicyagent/"
